modifica responsive marquee

--- a/css/animate.css
+++ b/css/animate.css
@@ -4197,9 +4197,14 @@
 
 
 @keyframes marquee {
-  0% { transform: translateX(0); }
-  100% { transform: translatex(-100%); }
+  from {
+    transform: translateX(0%);
+  }
+  to {
+    transform: translateX(-100%);
+  }
 }
+
 @keyframes marquee-2 {
   0% { transform: translateX(-100%); }
   100% { transform: translatex(0); }
